= Nokee Release Notes
:jbake-type: release_notes
:jbake-description: See what version {jbake-version} of the Gradle Nokee plugins has to offer!

The Nokee team is excited to announce the first release that will kickstart the new wave of native development in Gradle.

This release focus on adding <<release-notes.adoc#sec:jni_libraries,support for building JVM libraries using the Java Native Interface (JNI) runtime>>, writing <<release-notes.adoc#sec:documentation,helpful documentation>>, and creating <<release-notes.adoc#sec:infrastructure,the infrastructure to ensure quality releases in the future>>.

== Getting Started

To use the Nokee plugins in Gradle, simply copy the following code to the settings script of your project, then apply any of the <<manual/plugin-references.adoc#,Nokee plugins>> to your build using the link:{gradle-user-manual}/plugins.html#sec:plugins_block[plugins DSL block]:

.Configuring Gradle plugin resolution
====
[.multi-language-sample]
=====
.settings.gradle
[source,groovy,subs=attributes+]
----
pluginManagement {
   repositories {
      gradlePluginPortal()
      maven {
         url = uri('https://dl.bintray.com/nokeedev/distributions-snapshots')
      }
   }
   def nokeeVersion = '{jbake-version}'
   resolutionStrategy {
      eachPlugin {
         if (requested.id.id.startsWith('dev.nokee.')) {
            useModule("${requested.id.id}:${requested.id.id}.gradle.plugin:${nokeeVersion}")
         }
      }
   }
}
----
=====
[.multi-language-sample]
=====
.settings.gradle.kts
[source,kotlin,subs=attributes+]
----
pluginManagement {
   repositories {
      gradlePluginPortal()
      maven {
         url = uri("https://dl.bintray.com/nokeedev/distributions-snapshots")
      }
   }
   val nokeeVersion = "{jbake-version}"
   resolutionStrategy {
      eachPlugin {
         if (requested.id.id.startsWith("dev.nokee.")) {
            useModule("${requested.id.id}:${requested.id.id}.gradle.plugin:${nokeeVersion}")
         }
      }
   }
}
----