@@ -1,5 +1,6 @@
 = C Language
 :jbake-type: reference_chapter
+:jbake-tags: user manual, gradle plugin reference, c, native, gradle
 :jbake-description: Learn what the Nokee's C language plugin (i.e. dev.nokee.c-language) has to offer for your Gradle build.
 
 The C Language Plugin provides the tasks, configurations and conventions for compiling C source files.
