@@ -1,5 +1,6 @@
 = {cpp} Language
 :jbake-type: reference_chapter
+:jbake-tags: user manual, gradle plugin reference, c++, native, gradle
 :jbake-description: Learn what the Nokee's {cpp} language plugin (i.e. dev.nokee.cpp-language) has to offer for your Gradle build.
 
 The {cpp} Language Plugin provides the tasks, configurations and conventions for compiling {cpp} source files.
