@@ -1,6 +1,7 @@
 = Java/C JNI Library
 :jbake-summary: JNI library implemented in Java and C.
 :jbake-type: sample_chapter
+:jbake-tags: sample, jni, java, jvm, library, native, c, gradle
 :jbake-category: Java Native Interface (JNI)
 :jbake-description: See how the Nokee Gradle plugins can build a Java Native Interface (JNI) library implemented in Java and C.
 
