@@ -1,6 +1,7 @@
 = Java/{cpp} JNI Library
 :jbake-summary: JNI library implemented in Java and {cpp}.
 :jbake-type: sample_chapter
+:jbake-tags: sample, jni, library, jvm, java, c++, native, gradle
 :jbake-category: Java Native Interface (JNI)
 :jbake-description: See how the Nokee Gradle plugins are used for building a Java Native Interface (JNI) library implemented in Java and {cpp}.
 
