@@ -1,6 +1,7 @@
 = JNI Library Target Machines Configuration
 :jbake-summary: Configure the target machines for a JNI library.
 :jbake-type: sample_chapter
+:jbake-tags: sample, jni, java, jvm, library, target machines, native, c++, gradle
 :jbake-category: Java Native Interface (JNI)
 :jbake-description: See how to configure the target machines of a Java Native Interface (JNI) library using the Gradle Nokee plugins.
 
