@@ -1,6 +1,7 @@
 = Publish JNI Library with Target Machines
 :jbake-summary: Publish a JNI library with target machines to a binary repository.
 :jbake-type: sample_chapter
+:jbake-tags: sample, jni, java, jvm, native, target machines, c++, maven, gradle
 :jbake-category: Java Native Interface (JNI)
 :jbake-description: See how to publish a Java Native Interface (JNI) library for multiple machines.
 
